==> pqzx/ubxlib/port/platform/stm32cube/src/u_port_spi.c <==
#include "stddef.h"
#include "stdint.h"
#include "stdbool.h"
#include "string.h"   // memset()
#include "u_error_common.h"
#include "u_cfg_sw.h"
#include "u_cfg_hw_platform_specific.h"
#include "u_port.h"
#include "u_port_os.h"
#include "u_port_spi.h"
#include "stm32h7xx_ll_bus.h"
#include "stm32h7xx_ll_rcc.h"
#include "stm32h7xx_ll_gpio.h"
#include "stm32h7xx_ll_spi.h"
#include "stm32h7xx_hal_spi.h"
#include "u_port_private.h"      // Down here 'cos it needs GPIO_TypeDef
# define U_PORT_SPI_MAX_NUM 6

static int32_t transfer(int32_t spi, const char *pSend, size_t bytesToSend,
                        char *pReceive, size_t bytesToReceive)
{
    int32_t errorCodeOrReceiveSize = 0;
    SPI_TypeDef *pReg = gpSpiReg[spi];
    size_t transferSize = bytesToSend;
    uint16_t fillWord = gSpiData[spi].fillWord;
    size_t wordSize = 1;

    if (bytesToReceive > transferSize) {
        transferSize = bytesToReceive;
    }

    if (LL_SPI_GetDataWidth(pReg) == LL_SPI_DATAWIDTH_16BIT) {
        wordSize++;
    }

    if (transferSize > 0) {
        // Enable SPI, which will assert CS/NSS/Select
        LL_SPI_Enable(pReg);

        // Do the blocking send/receive
        while (transferSize > 0) {
            if (bytesToSend == 0) {
                // If there's nothing to send, send fill
                // making sure to rotate along the fill
                // word contents if we are sending single
                // bytes
                if ((wordSize > 1) || ((transferSize % 2) == 0)) {
                    pSend = (const char *) &fillWord;
                } else {
                    pSend++;
                }
            }
            if (wordSize > 1) {
                LL_SPI_TransmitData16(pReg, *(uint16_t *) pSend);
            } else {
                LL_SPI_TransmitData8(pReg, *pSend);
            }
            // Wait for the byte to be sent
            while (!LL_SPI_IsActiveFlag_TXE(pReg)) {}
            if (bytesToReceive > 0) {
                // Wait for a byte to be received
                while (!LL_SPI_IsActiveFlag_RXNE(pReg)) {}
                // Read it (which will reset RXNE)
                if (wordSize > 1) {
                    *(uint16_t *) pReceive = LL_SPI_ReceiveData16(pReg);
                } else {
                    *pReceive = LL_SPI_ReceiveData8(pReg);
                }
                bytesToReceive -= wordSize;
                errorCodeOrReceiveSize += wordSize;
                pReceive += wordSize;
            }
            transferSize -= wordSize;
            if (bytesToSend >= wordSize) {
                bytesToSend -= wordSize;
                if (bytesToSend > 0) {
                    pSend += wordSize;
                }
            }
        }

        // Disable SPI, which will switch off CS/NSS/Select
        LL_SPI_Disable(pReg);
    }

    return errorCodeOrReceiveSize;
}

static void closeSpi(uPortSpiData_t *pSpiData)
{
    SPI_TypeDef *pReg = pSpiData->pReg;

    if (pReg != NULL) {
        // Disable the SPI block
        LL_SPI_Disable(pReg);
        // Stop the bus
        clockDisable(pReg);
        // Set the register in the entry to NULL to indicate that it is
        // no longer in use
        pSpiData->pReg = NULL;
    }
}

int32_t uPortSpiOpen(int32_t spi, int32_t pinMosi, int32_t pinMiso,
                     int32_t pinClk, bool controller)
{
    int32_t handleOrErrorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    SPI_TypeDef *pReg;
    uCommonSpiControllerDevice_t device = U_COMMON_SPI_CONTROLLER_DEVICE_DEFAULTS(-1);
    int32_t configOutcome;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        // > 0 rather than >= 0 below 'cos ST number their SPIs from 1
        if ((spi > 0) && (spi < sizeof(gSpiData) / sizeof(gSpiData[0])) &&
            (gSpiData[spi].pReg == NULL) && controller &&
            (((pinMosi >= 0) || (pinMiso >= 0)) && (pinClk >= 0))) {
            pReg = gpSpiReg[spi];

            // Enable the clocks to the APB bus for this SPI
            handleOrErrorCode = clockEnable(pReg);
            if (handleOrErrorCode >= 0) {
                handleOrErrorCode = (int32_t) U_ERROR_COMMON_PLATFORM;

                // Enable clock to the registers for the pins
                uPortPrivateGpioEnableClock(pinClk);
                if (pinMosi >= 0) {
                    uPortPrivateGpioEnableClock(pinMosi);
                }
                if (pinMiso >= 0) {
                    uPortPrivateGpioEnableClock(pinMiso);
                }
                // Unlike the I2C case, the GPIOs for SPI aren't always
                // on the same port, hence we initialise each separately
                configOutcome = initGpio(spi, pinClk, U_PORT_SPI_PIN_TYPE_CLK);
                if ((configOutcome == SUCCESS) && (pinMosi >= 0)) {
                    configOutcome = initGpio(spi, pinMosi, U_PORT_SPI_PIN_TYPE_MOSI);
                }
                if ((configOutcome == SUCCESS) && (pinMiso >= 0)) {
                    configOutcome = initGpio(spi, pinMiso, U_PORT_SPI_PIN_TYPE_MISO);
                }

                // Configure the SPI registers
                if ((configOutcome == SUCCESS) &&
                    (configureSpi(pReg, &device, pinMosi) == 0)) {
                    // All good, store the configuration
                    gSpiData[spi].pinMosi = pinMosi;
                    gSpiData[spi].pinMiso = pinMiso;
                    gSpiData[spi].pinSelect = device.pinSelect;
                    gSpiData[spi].fillWord = (uint16_t) device.fillWord;
                    // Now we're good to go
                    gSpiData[spi].pReg = pReg;
                    // Return the SPI HW block number as the handle
                    handleOrErrorCode = spi;
                } else {
                    // Put the bus back to sleep on error
                    clockDisable(pReg);
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return handleOrErrorCode;
}

int32_t uPortSpiControllerSetDevice(int32_t handle,
                                    const uCommonSpiControllerDevice_t *pDevice)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    int32_t configOutcome = SUCCESS;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gSpiData) / sizeof(gSpiData[0])) &&
            (gSpiData[handle].pReg != NULL) && (pDevice != NULL) &&
            ((pDevice->pinSelect < 0) ||
             ((pDevice->pinSelect & U_COMMON_SPI_PIN_SELECT_INVERTED) != U_COMMON_SPI_PIN_SELECT_INVERTED))) {
            errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
            if (configIsDifferent(handle, pDevice)) {
                errorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
                // If the configuration we're given is not the same as
                // the current one, sort the new configuration, starting
                // with the select pin, if there is one
                if (pDevice->pinSelect >= 0) {
                    uPortPrivateGpioEnableClock(pDevice->pinSelect);
                    configOutcome = initGpio(handle, pDevice->pinSelect,
                                             U_PORT_SPI_PIN_TYPE_SELECT);
                }
                if ((configOutcome == SUCCESS) &&
                    (configureSpi(gSpiData[handle].pReg, pDevice, 0) == 0)) {
                    // All good, store the new configuration
                    gSpiData[handle].pinSelect = pDevice->pinSelect;
                    gSpiData[handle].fillWord = (uint16_t) pDevice->fillWord;
                    errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}

int32_t uPortSpiControllerGetDevice(int32_t handle,
                                    uCommonSpiControllerDevice_t *pDevice)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gSpiData) / sizeof(gSpiData[0])) &&
            (gSpiData[handle].pReg != NULL) && (pDevice != NULL)) {
            getDevice(handle, pDevice);
            errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}

uint64_t uPortSpiControllerSendReceiveWord(int32_t handle, uint64_t value,
                                           size_t bytesToSendAndReceive)
{
    uint64_t valueReceived = 0;
    SPI_TypeDef *pReg;
    bool reverseBytes = false;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        if ((handle >= 0) && (handle < sizeof(gSpiData) / sizeof(gSpiData[0])) &&
            (gSpiData[handle].pReg != NULL) &&
            (bytesToSendAndReceive <= sizeof(value))) {
            pReg = gpSpiReg[handle];

            // Need to perform byte reversal if the length of the word we
            // are sending is greater than one byte, if there is a
            // mismatch between the endianness of this processor and the
            // endianness of bit-transmission, and it will only work
            // if the word length is set to 1
            reverseBytes = ((bytesToSendAndReceive > 1) &&
                            (((LL_SPI_GetTransferBitOrder(pReg) == LL_SPI_LSB_FIRST) !=
                              U_PORT_IS_LITTLE_ENDIAN)) &&
                            (LL_SPI_GetDataWidth(pReg) == LL_SPI_DATAWIDTH_8BIT));

            if (reverseBytes) {
                U_PORT_BYTE_REVERSE(value, bytesToSendAndReceive);
            }

            transfer(handle, (const char *) &value, bytesToSendAndReceive,
                     (char *) &valueReceived, bytesToSendAndReceive);

            if (reverseBytes) {
                U_PORT_BYTE_REVERSE(valueReceived, bytesToSendAndReceive);
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return valueReceived;
}
